# rk-tool

install/lib/: libopencv_dpm.so.4.10.0  libopencv_intensity_transform.so.4.10.0  libopencv_phase_unwrapping.so.4.10.0  libopencv_quality.so.4.10.0  libopencv_reg.so.4.10.0  libopencv_shape.so.4.10.0  libopencv_signal.so.4.10.0  libopencv_structured_light.so.4.10.0  libopencv_tracking.so.4.10.0  libopencv_videoio.so.4.10.0  libopencv_xfeatures2d.so.4.10.0  libopencv_ximgproc.so.4.10.0
install/lib/cmake/opencv4/: OpenCVConfig.cmake
opencv-4.10.0/: command.txt  tool_chain.cmake
opencv-c/: CMakeLists.txt  DisplayImage.cpp  toolchain.cmake
rknn_model_zoo/: build-linux-back.sh  build-linux.sh
rknn_model_zoo/examples/yolov5/cpp/: CMakeLists.txt
rknn_model_zoo/examples/yolov5/cpp/rknpu1/: yolov5.cc
rknn_model_zoo/examples/yolov5_change/cpp/: postprocess.h
rknn_model_zoo/examples/yolov5_change/python/: yolov5.py
rknn_model_zoo/examples/yolov5_ov/cpp/: CMakeLists.txt  main.cc  postprocess.cc
rknn_model_zoo/install - 副本/rk356x_linux_aarch64/rknn_yolov5_demo/: rknn_yolov5_demo
